--- a/templates/conventions/actions/update_administration.html
+++ b/templates/conventions/actions/update_administration.html
@@ -10,7 +10,7 @@
                 name='cancel_convention'
                 value="1"
                 data-fr-opened="{% if update_convention_administration_form.errors|length > 0 %}true{% else %}false{% endif %}"
-                aria-controls="update-administration-modal">Modifer l'administration</button>
+                aria-controls="update-administration-modal">Modifier l'administration</button>
         </div>
     </div>
     <hr>
