--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -38,7 +38,9 @@
                         </a>
                     </div>
                 {% endif %}
-                {% if convention.is_avenant %}
+                {% if convention.is_denonciation %}
+                    récapitulatif de la dénonciation
+                {% elif convention.is_avenant %}
                     {% if 'bailleur' in avenant_list %}
                         {% include "conventions/recapitulatif/bailleur.html" with target_url='conventions:avenant_bailleur' bailleur=convention.bailleur %}
                     {% endif %}
