--- a/templates/conventions/actions/back_to_instruction.html
+++ b/templates/conventions/actions/back_to_instruction.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if convention|display_back_to_instruction:request %}
 
@@ -6,16 +7,16 @@
         <div class="block--row-strech">
             <div class="block--row-strech-1 fr-mr-6w">
                 <p class="fr-alert__title">
-                    Repasser {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} au statut "A instruire"
+                    Repasser {{convention|display_kind_with_demonstratif}} au statut "A instruire"
                 </p>
                 <p>
-                    {% if convention.is_avenant %}Cet avenant{% else %}Cette convention{% endif %} est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà {% if convention.is_avenant %}signé{% else %}signée{% endif %}{% endif %}. Cependant,
-                    s'il reste des modifications à apporter, vous avez la possibilité de la repasser en statut "A instruire".
+                    {{convention|display_kind_with_demonstratif}} est {% if convention|display_redirect_sent %}en attente de signature{% else %}déjà signé{{convention|display_gender_terminaison}}{% endif %}. Cependant,
+                    s'il reste des modifications à apporter, vous avez la possibilité de {{convention|display_pronom}} repasser en statut "A instruire"
                     en cliquant sur le bouton ci-dessous
                 </p>
                 <p>
                     <span class="fr-icon-warning-line" aria-hidden="true"></span>
-                    Une fois {% if convention.is_avenant %}l‘avenant{% else %}la convention{% endif %} en statut "A instruire", c'est l'instructeur qui aura la main sur la convention (c'est à dire vous-même).
+                    Une fois {{convention|display_kind_with_pronom}} en statut "A instruire", c'est l'instructeur qui aura la main sur {{convention|display_kind_with_pronom}} (c'est à dire vous-même).
                     Si l'intervention du bailleur est nécessaire, vous devrez alors lui renvoyer en cliquant sur le bouton "Demander des corrections au bailleur"
                 </p>
             </div>
