--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -1,23 +1,18 @@
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if convention|display_delete_convention %}
     <div class="fr-col-12 block--row-strech fr-my-5w">
         <div class="block--row-strech-1 fr-mt-2w fr-mr-5w">
             <p class="fr-alert__title">
-                Supprimer ce projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}
+                Supprimer ce projet {{convention|display_kind_with_preposition}}
             </p>
             <p class="fr-mb-0">
-                {% if convention.is_avenant %}
-                    Cet avenant est annulé, il vous est possible de le supprimer définitivement.
-                    Vous perdrez alors tous les informations liées à cet avenant.
-                {% else %}
-                    Cette convention est annulée, il vous est possible de la supprimer définitivement.
-                    Vous perdrez alors tous les informations liées à cette convention.
-                {% endif %}
+                {{convention|display_kind_with_demonstratif_with_cap}} est annulé{{convention|display_gender_terminaison}}, il vous est possible de {{convention|display_pronom}} supprimer définitivement. Vous perdrez alors tous les informations liées à {{convention|display_kind_with_demonstratif}}.
             </p>
         </div>
         <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-icon-delete-line fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
-            Supprimer définitivement {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %}
+            Supprimer définitivement {{convention|display_kind_with_pronom}}
         </button>
     </div>
     <hr>
@@ -32,9 +27,9 @@
                         <div class="fr-modal__content">
                             <h1 id="fr-modal-{{convention.uuid}}-title" class="fr-modal__title">
                                 <span class="fr-icon-arrow-right-line fr-icon--lg"></span>
-                                {{ convention }}{% if convention.is_avenant %} - Avenant{% if convention.numero %} n°{{ convention.numero }}{% endif %}{% endif %}
+                                {{ convention }}{% if convention.is_avenant %} {% if not convention.is_denonciation %} - Avenant {% else %} - Dénonciation {% endif %}{% if convention.numero %} n°{{ convention.numero }}{% endif %}{% endif %}
                             </h1>
-                            <p>Vous vous apprétez à supprimer {% if convention.is_avenant %}l'avenant à la convention{% else %}la convention{% endif %} "{{convention}}", êtes-vous sur de vouloir supprimer {% if convention.is_avenant %}cet avenant{% else %}cette convention{% endif %} ?</p>
+                            <p>Vous vous apprétez à supprimer {% if convention.is_avenant %}{% if not convention.is_denonciation %}l'avenant à la convention{% else %}la dénonciation de la convention{% endif %}{% else %}la convention{% endif %} "{{convention}}", êtes-vous sur de vouloir supprimer {{convention|display_kind_with_demonstratif}} ?</p>
                         </div>
                         <div class="fr-modal__footer">
                             <ul class="fr-btns-group fr-btns-group--right fr-btns-group--inline-reverse fr-btns-group--inline-lg fr-btns-group--icon-left">
@@ -42,7 +37,7 @@
                                     <form action="{% url 'conventions:delete' convention_uuid=convention.uuid %}" method="post" data-turbo="false">
                                         {% csrf_token %}
                                         <button type="submit" class="fr-btn fr-btn--icon-left fr-icon-delete-line">
-                                            Supprimer définitivement {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
+                                            Supprimer définitivement {{convention|display_kind_with_pronom}}
                                         </button>
                                     </form>
                                 </li>
