--- a/templates/conventions/actions/instructeur_notification.html
+++ b/templates/conventions/actions/instructeur_notification.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if convention|display_notification_bailleur_to_instructeur:request %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
@@ -8,10 +9,10 @@
                 <p>Denière notification de l'instructeur : {{ convention.get_last_bailleur_notification.cree_le }}</p>
             {% endif %}
             {% if convention|display_demande_instruction %}
-                <h4>Vous avez modifié {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}<br>
-                    Renvoyez {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} à l'instruction</h4>
+                <h4>Vous avez modifié {{convention|display_kind_with_pronom}}<br>
+                    Renvoyez {{convention|display_kind_with_pronom}} à l'instruction</h4>
             {% else %}
-                <h4>Vous avez modifié {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}<br>
+                <h4>Vous avez modifié {{convention|display_kind_with_pronom}}<br>
                     Faites part de vos commentaires à l'instructeur </h4>
             {% endif %}
             <div>
@@ -33,7 +34,7 @@
                     </div>
                     {% if convention|display_demande_instruction %}
                         <button class="fr-btn">
-                            Renvoyer {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %} à l'instruction
+                            Renvoyer {{convention|display_kind_with_pronom}} à l'instruction
                         </button>
                     {% else %}
                         <button class="fr-btn">
