--- a/templates/conventions/actions/instructeur_validation.html
+++ b/templates/conventions/actions/instructeur_validation.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load display_filters %}
 {% if convention|display_validation:request %}
     <div role="alert" class="fr-alert fr-alert--A_signer fr-icon-arrow-right-s-line-double h-100">
         {% if convention.is_avenant %}
@@ -37,7 +38,7 @@
 
 {% if convention|display_is_validated %}
     <div role="alert" class="fr-alert fr-alert--success">
-        <p class="fr-alert__title">{% if convention.is_avenant %}L'avenant a été validé{% else %}La convention a été validée{% endif %} le {{ convention.valide_le|date:"j F Y" }}</p>
+        <p class="fr-alert__title">{{convention|display_kind_with_pronom}} a été validé{{convention|display_gender_terminaison}} le {{ convention.valide_le|date:"j F Y" }}</p>
         <p class="fr-alert__title">avec le numéro {{convention.numero}}</p>
     </div>
     <hr>
