--- a/templates/conventions/actions/submit_convention.html
+++ b/templates/conventions/actions/submit_convention.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if convention|display_submit_convention:request %}
     <div class="fr-col-12 fr-mb-5w fr-mt-3w">
@@ -7,10 +8,9 @@
                 Soumettre au service instructeur
             </p>
             <p>
-                Votre projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %} est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
+                Votre projet {{convention|display_kind_with_preposition}} est terminé ? Soumettez-le à l'instruction. Le service instructeur en sera informé et vous tiendra au courant de l'évolution de l'instruction.
             </p>
-            <p>
-                Si vous avez encore des modifications à apporter au projet {% if convention.is_avenant %}d'avenant{% else %}de convention{% endif %}, vous pouvez y revenir plus tard.
+            <p>Si vous avez encore des modifications à apporter au projet de {{convention|display_kind_with_preposition}}, vous pouvez y revenir plus tard.
             </p>
             {% with numero_galion=convention.programme.numero_galion %}
                 {% if not numero_galion %}
