--- a/templates/conventions/actions/update_date_signature.html
+++ b/templates/conventions/actions/update_date_signature.html
@@ -1,3 +1,4 @@
+{% load display_filters %}
 <form method="post" action="" data-turbo="false">
     {% csrf_token %}
     <input id="update_date_signature" type="hidden" name="update_date_signature" value="true">
@@ -5,7 +6,7 @@
         <div class="block--row-strech-1 fr-mr-6w">
 
             <p>
-                {% if convention.is_avenant %}Votre avenant a été signé{% else %}Votre convention a été signée{% endif %} le {{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}.<br/>
+                Votre {{convention|display_kind}} a été signé{{convention|display_gender_terminaison}} le {{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}.<br/>
                 Ce n'est pas la bonne date ?
             </p>
             {% include "common/form/input_date.html" with form_input=updatedate_form.televersement_convention_signee_le editable=True %}
