--- a/templates/conventions/common/form_header.html
+++ b/templates/conventions/common/form_header.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if convention %}
     <div class="apilos-sticky fr-container fr-pt-2w {% if convention|display_convention_form_progressbar %}no_navbar{% endif %}">
@@ -7,7 +8,7 @@
             <div class="block--row-strech-1 fr-py-3w fr-mr-2w apilos--overflow_ellipsis">
                 <h1 class="fr-h2 apilos-d-inline">{{convention.programme.nom}}</h1>
                 {% if convention.is_avenant %}
-                    <span class="apilos-h2-thin"> - Avenant{% if convention.numero %} n°{{ convention.numero }}{% endif %}</span>
+                    <span class="apilos-h2-thin"> - {{convention|display_kind_with_cap}}{% if convention.numero %} n°{{ convention.numero }}{% endif %}</span>
                     <div class="fr-py-3w">
                         <a class='fr-link apilos-link' href="{% url 'conventions:post_action' convention_uuid=convention.parent.uuid %}">Consulter la convention originale</a>
                     </div>
@@ -46,7 +47,7 @@
             {% endif %}
             <div role="alert" class="fr-col-12 fr-mb-3w fr-alert fr-alert--{{convention.statut_for_template.key_statut}} fr-icon-{{convention.statut_icone}}-line">
                 <p class="fr-text--lg">
-                    Votre {% if convention.is_avenant %}avenant{% else %}convention{% endif %} est
+                    Votre {{convention|display_kind}} est
                     <span class="fr-text--bold">
                         {% if request|is_instructeur %}
                             {{convention.short_statut_for_instructeur|lower}}
@@ -57,16 +58,16 @@
                 </p>
                 {% if convention.statut == CONVENTION_STATUT.A_SIGNER or convention.statut == CONVENTION_STATUT.SIGNEE %}
                     <p>
-                        {% if convention.is_avenant %}Il{% else %}Elle{% endif %} porte le numéro <strong>{{ convention.numero }}</strong>
+                        {{convention|display_personnal_pronom_with_cap}} porte le numéro <strong>{{ convention.numero }}</strong>
                     </p>
                 {% endif %}
                 {% if convention.statut == CONVENTION_STATUT.A_SIGNER %}
                     {% if request|is_instructeur %}
-                        Vous pouvez <a class="fr-link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>déposer {% if convention.is_avenant %} l'avenant signé{% else %} la convention signée{% endif %} </a>
+                        Vous pouvez <a class="fr-link" href="{% url 'conventions:sent' convention_uuid=convention.uuid %}" target="_self" {% if nav_bar_step == "sent" %}aria-current="page"{% endif %}>déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}</a>
                     {% else %}
                         {% if convention.programme.administration.adresse and convention.programme.administration.code_postal and convention.programme.administration.ville %}
                             <p>
-                                {% if convention.is_avenant %}Imprimez-le, signez-le et envoyez le{% else %}Imprimez-la, signez-la et envoyez la{% endif %} à l'adresse suivante : {{ convention.programme.administration.adresse }} - {{ convention.programme.administration.code_postal }} {{ convention.programme.administration.ville }}
+                                Imprimez-{{convention|display_pronom}}, signez-{{convention|display_pronom}} et envoyez {{convention|display_pronom}} à l'adresse suivante : {{ convention.programme.administration.adresse }} - {{ convention.programme.administration.code_postal }} {{ convention.programme.administration.ville }}
                             </p>
                         {% endif %}
                     {% endif %}
