--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -3,6 +3,7 @@
 {% block page_title %} Actions - APiLos {% endblock%}
 
 {% load static %}
+{% load display_filters %}
 
 {% block content %}
     <div class="fr-container-fluid ds_banner">
@@ -22,7 +23,7 @@
                     </div>
                     <div class="fr-col-11">
                         {% if convention.televersement_convention_signee_le %}
-                            <div class="fr-grid-row">{% if convention.is_avenant %}Avenant signé {% else %}Convention signée {% endif %}le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
+                            <div class="fr-grid-row">{{convention|display_kind_with_cap}} signé{{convention|display_gender_terminaison}} le <span class="fr-ml-1v"><strong>{{convention.televersement_convention_signee_le|date:"d F Y"|default_if_none:'-'}}</strong></span></div>
                         {% else %}
                             <div class="fr-grid-row">Votre convention signée a déjà été déposée</div>
                         {% endif %}
@@ -32,6 +33,7 @@
                     </div>
                 </div>
                 {% include "conventions/avenant_list.html" with conventions=avenants %}
+                {% include "conventions/denonciation_list.html" with conventions=denonciation %}
             </div>
             <div class="fr-col-12 fr-mb-4w">
                 <div role="alert" class="fr-alert fr-alert--info  fr-icon-arrow-right-s-line-double">
@@ -46,7 +48,12 @@
                             </a>
                         {% else %}
                             <button class="fr-btn fr-my-1w fr-mr-2w" disabled>
-                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Un avenant est déjà en cours.
+                                <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>
+                                {% if convention.is_avenant and convention.is_denonciation %}
+                                    La dénonciation de la convention est en cours
+                                {% else %}
+                                    Un avenant est déjà en cours.
+                                {% endif %}
                             </button>
                         {% endif %}
                         <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
@@ -80,10 +87,10 @@
                     <div class="fr-mb-2w block--row-strech">
                         <div class="block--row-strech-1 fr-my-2w">
                             <p class="fr-alert__title">
-                                Déposer à nouveau {% if convention.is_avenant %}l'avenant{% else %}la convention{% endif %}
+                                Déposer à nouveau {{convention|display_kind_with_pronom}}
                             </p>
                             <p class="fr-mb-0">
-                                Si nécessaire, vous pouvez déposer une nouvelle version de {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %} ici.
+                                Si nécessaire, vous pouvez déposer une nouvelle version de {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}} ici.
                             </p>
                         </div>
                         <form method="post" action="{% url 'conventions:sent' convention_uuid=convention.uuid %}" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
@@ -97,7 +104,7 @@
                             <div class="block--row-strech">
                                 <div>
                                     <button id="{{upform.file.id_for_label}}_upload_button" class="fr-icon-upload-line fr-btn--icon-left fr-btn fr-btn--secondary fr-my-1w" type="button">
-                                        Déposer {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %}
+                                        Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
                                     </button>
                                     {% for error in upform.file.errors %}
                                         <p id="text-input-error-desc-error" class="fr-error-text">
