--- a/templates/conventions/saved.html
+++ b/templates/conventions/saved.html
@@ -27,11 +27,7 @@
             <div class="form-button-footer fr-col-md-12  fr-py-5w">
                 {% include "common/button/return_convention_index.html" %}
                 <a class="fr-btn fr-btn--icon-left fr-icon-arrow-left-s-line" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
-                    {% if convention.is_avenant %}
-                        Retour à l'avenant
-                    {% else %}
-                        Retour à la convention
-                    {% endif %}
+                    Retour à {{convention|display_kind_with_pronom}}
                 </a>
             </div>
 
