--- a/templates/conventions/avenant/complete_form_for_avenants.html
+++ b/templates/conventions/avenant/complete_form_for_avenants.html
@@ -1,6 +1,7 @@
-<p class="fr-alert__title">Valider l'avenant</p>
+{% load display_filters %}
+<p class="fr-alert__title">Valider {{convention|display_kind_with_pronom}} </p>
 {% if form %}
-    <p class="fr-mb-0">Pour pouvoir valider cet avenant, vous devez remplir les informations suivantes concernant la convention originale.</p>
+    <p class="fr-mb-0">Pour pouvoir valider {{convention|display_kind_with_demonstratif}}, vous devez remplir les informations suivantes concernant la convention originale.</p>
     <form method="post"  action="{% url 'conventions:validate' convention_uuid=convention.uuid %}" data-turbo="false"  enctype="multipart/form-data">
         {% csrf_token %}
         <div class="fr-col-12 fr-mt-2w">
