--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -1,4 +1,5 @@
 {% load custom_filters %}
+{% load display_filters %}
 
 {% if url_name != "operation_conventions" %}
     <div class="fr-container">
@@ -254,7 +255,7 @@
                                                     {{convention.programme|highlight:search_input}}
                                                 </strong>
                                                 {% if convention.is_avenant %}
-                                                    <span class="text-title-blue-france fr-p-1w fr-ml-1w apilos-tag-avenant background-white">Avenant</span>
+                                                    <span class="{% if convention.is_denonciation %}warning-notification {% else %}text-title-blue-france {% endif %} fr-p-1w fr-ml-1w apilos-tag-avenant background-white">{{convention|display_kind_with_cap}}</span>
                                                 {% endif %}
                                             </div>
                                             {% if url_name == "search_instruction" and convention.programme.numero_galion %}
