--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -110,6 +110,11 @@
                     {% include "conventions/recapitulatif/foyer_attribution.html" with target_url='conventions:foyer_attribution' %}
                     {% include "conventions/recapitulatif/residence_attribution.html" with target_url='conventions:residence_attribution' %}
                     {% include "conventions/recapitulatif/variantes.html" with target_url='conventions:variantes' %}
+                    {% if request.path != "conventions:sent" %}
+                        {% comment %} La convention ne doit pas être affichée sur la vue
+                        Informations détaillées d'une convention finalisée {% endcomment %}
+                        {% include "conventions/recapitulatif/administration.html" with target_url="conventions:administration" %}
+                    {% endif %}
                     {% include "conventions/recapitulatif/commentaires.html" with target_url='conventions:commentaires' %}
                 {% endif %}
                 <turbo-frame id="convention_actions" data-turbo="true">
