--- a/templates/common/button/next_and_save.html
+++ b/templates/common/button/next_and_save.html
@@ -1,3 +1,10 @@
-<button class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right">
+<button
+    class="fr-btn fr-icon-arrow-right-s-line fr-btn--icon-right"
+    {% block extra_attributes %}
+    {% endblock extra_attributes %}
+>
     Enregistrer et Suivant
 </button>
+
+{% block after_button %}
+{% endblock after_button %}
