--- a/templates/conventions/administration.html
+++ b/templates/conventions/administration.html
@@ -3,28 +3,23 @@
 {% block page_title %}Administration - APiLos{% endblock%}
 
 {% block content %}
-    <div class="fr-container-fluid ds_banner">
-        {% include "conventions/common/form_header.html"%}
-        {% include "common/step_progressbar.html"%}
-        <div class="fr-container">
-            <form method="post" action="">
-                {% csrf_token %}
-                <div class="fr-grid-row fr-grid-row--gutters">
-                    <div class="fr-col-md-12">
-                        <form method="post"
-                            data-turbo="false"
-                        >
+    {% with "administration_form" as form_id %}
+        <div class="fr-container-fluid ds_banner">
+            {% include "conventions/common/form_header.html"%}
+            {% include "common/step_progressbar.html"%}
+            <div class="fr-container">
+                <form method="post" action="" id="{{ form_id }}">
+                    {% csrf_token %}
+                    <div class="fr-grid-row fr-grid-row--gutters">
+                        <div class="fr-col-md-12">
                             {% csrf_token %}
                             {% include "common/form/input_text.html" with form_input=form.verification editable=True %}
                             {% include "common/form/input_select.html" with form_input=form.administration editable=True %}
-                            <button type="submit" class="fr-btn fr-btn--icon-left fr-icon-warning-line">
-                                Changer définitivement l'administration
-                            </button>
-                            <strong>Vous n'aurez plus accès à cette convention dès qu'elle sera transférée à une autre administration</strong>
-                        </form>
+                        </div>
                     </div>
-                </div>
-            </form>
+                </form>
+                {% include "conventions/common/form_footer_button.html" with warning="Vous n'aurez plus accès à cette convention dès qu'elle sera transférée à une autre administration" %}
+            </div>
         </div>
-    </div>
+    {% endwith %}
 {% endblock %}
