--- a/templates/conventions/administration.html
+++ b/templates/conventions/administration.html
@@ -8,6 +8,7 @@
             {% include "conventions/common/form_header.html"%}
             {% include "common/step_progressbar.html"%}
             <div class="fr-container">
+                <h3>Modification de l'administration</h3>
                 <form method="post" action="" id="{{ form_id }}">
                     {{ form.errors }}
                     {% csrf_token %}
