better management and search of bailleurs and administartion

--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -22,7 +22,7 @@
                                             <option selected value>Bailleur</option>
                                             {% for bailleur in bailleur_query %}
                                                 <option value="{{ bailleur.uuid }}">
-                                                    {{ bailleur }} ( {{ bailleur.siren }} )
+                                                    {{ bailleur }}
                                                 </option>
                                             {% endfor %}
                                         {% endif %}
