--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -115,12 +115,18 @@
                 <turbo-frame id="convention_actions" data-turbo="true">
                     {% include "conventions/actions/submit_convention.html" %}
                     {% include "conventions/actions/instructeur_notification.html" %}
-                    <div class="fr-grid-row fr-grid-row--gutters fr-mt-3w">
-                        <div class="fr-col-6 fr-py-5w fr-px-3w">{% include "conventions/actions/bailleur_notification.html" %}</div>
-                        <div class="fr-col-6 fr-py-5w fr-px-3w apilos-or-border">
-                            {% include "conventions/actions/instructeur_validation.html" %}
+                    {% if not convention|display_is_validated %}
+                        <div class="fr-grid-row fr-grid-row--gutters fr-mt-3w">
+                            <div class="fr-col-6 fr-py-5w fr-px-3w">{% include "conventions/actions/bailleur_notification.html" %}</div>
+                            <div class="fr-col-6 fr-py-5w fr-px-3w apilos-or-border">
+                                {% if convention.is_denonciation %}
+                                    {% include "conventions/actions/validate_denonciation.html" %}
+                                {% else %}
+                                    {% include "conventions/actions/instructeur_validation.html" %}
+                                {% endif %}
+                            </div>
                         </div>
-                    </div>
+                    {% endif %}
                     {% include "conventions/actions/type1and2_options.html" %}
                     {% include "conventions/actions/generate_convention.html" %}
                     {% if request.path != "conventions:sent" %}
