--- a/templates/conventions/actions/upload_signed_document.html
+++ b/templates/conventions/actions/upload_signed_document.html
@@ -3,10 +3,18 @@
     {% if request|is_instructeur %}
         <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
             <p class="fr-alert__title">
-                Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                {% if convention.is_denonciation %}
+                    Déposer l'acte de dénonciation publié
+                {% else %}
+                    Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                {% endif %}
             </p>
             <p class="fr-mb-2w">
-                Ici, vous pouvez déposer votre {{convention|display_kind}} signé{{convention|display_gender_terminaison}} afin qu'{{convention|display_personnal_pronom}} puisse être transmis{{convention|display_gender_terminaison}}.
+                {% if convention.is_denonciation %}
+                    Ici, vous pouvez déposer l'acte de dénonciation de votre convention publié.
+                {% else %}
+                    Ici, vous pouvez déposer votre {{convention|display_kind}} signé{{convention|display_gender_terminaison}} afin qu'{{convention|display_personnal_pronom}} puisse être transmis{{convention|display_gender_terminaison}}.
+                {% endif %}
             </p>
             <div class="block--row-strech">
 
@@ -21,7 +29,11 @@
                     <div class="block--row-strech">
                         <div>
                             <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                                {% if convention.is_denonciation %}
+                                    Déposer l'acte de dénonciation publié
+                                {% else %}
+                                    Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                                {% endif %}
                             </button>
                             {% for error in upform.file.errors %}
                                 <p id="text-input-error-desc-error" class="fr-error-text">
