--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -42,7 +42,7 @@
                     </p>
                     <p>Votre projet a évolué. Vous avez identifié des informations erronées ou caduques ?</p>
                     <div class="block--row-strech">
-                        {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant and convention|display_create_avenant %}
+                        {% if convention.is_avenant and convention.parent|display_create_avenant or not convention.is_avenant and convention|display_create_avenant  %}
                             <a class="fr-btn fr-my-1w fr-mr-2w" href="{% url 'conventions:new_avenant' convention_uuid=convention.uuid %}">
                                 <span class="fr-icon-add-circle-line fr-mr-1w" aria-hidden="true"></span>Créer un {% if convention.is_avenant %}autre {% endif %}avenant
                             </a>
@@ -130,15 +130,17 @@
                         </form>
                     </div>
                 </div>
-                <hr>
-                <div class="fr-col-12">
-                    <div class="fr-mb-5w fr-pt-2w">
-                        <p class="fr-alert__title">
-                            Date de signature
-                        </p>
-                        {% include "conventions/actions/update_date_signature.html" %}
+                {% if convention|display_is_not_resiliated_or_denonciated %}
+                    <hr>
+                    <div class="fr-col-12">
+                        <div class="fr-mb-5w fr-pt-2w">
+                            <p class="fr-alert__title">
+                                Date de signature
+                            </p>
+                            {% include "conventions/actions/update_date_signature.html" %}
+                        </div>
                     </div>
-                </div>
+                {% endif %}
             {% endif %}
             {% if convention|display_back_to_instruction:request %}
                 <hr>
@@ -150,9 +152,11 @@
             {% endif %}
             <div class="fr-col-12">
                 <hr>
-                {% include "conventions/avenant/denonciation_start.html" %}
-                {% if request|is_instructeur %}
-                    {% include "conventions/actions/denonciation_resiliation.html" %}
+                {% if convention|display_is_not_resiliated_or_denonciated %}
+                    {% include "conventions/avenant/denonciation_start.html" %}
+                    {% if request|is_instructeur %}
+                        {% include "conventions/actions/denonciation_resiliation.html" %}
+                    {% endif %}
                 {% endif %}
             </div>
         </div>
