--- a/templates/conventions/post_action.html
+++ b/templates/conventions/post_action.html
@@ -95,10 +95,19 @@
                     <div class="fr-mb-2w block--row-strech">
                         <div class="block--row-strech-1 fr-my-2w">
                             <p class="fr-alert__title">
-                                Déposer à nouveau {{convention|display_kind_with_pronom}}
+                                {% if convention.is_denonciation %}
+                                    Déposer l'acte de dénonciation
+                                {% else %}
+                                    Déposer à nouveau {{convention|display_kind_with_pronom}}
+                                {% endif %}
                             </p>
                             <p class="fr-mb-0">
-                                Si nécessaire, vous pouvez déposer une nouvelle version de {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}} ici.
+                                {% if convention.is_denonciation %}
+                                    Vous pouvez déposer l'acte de dénonciation ici. Il sera accessible sur la page de visualisation de la dénonciation.
+                                {% else %}
+                                    Si nécessaire, vous pouvez déposer une nouvelle version de {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}} ici.
+                                {% endif %}
+
                             </p>
                         </div>
                         <form method="post" action="{% url 'conventions:sent' convention_uuid=convention.uuid %}" enctype="multipart/form-data" id="{{upform.file.id_for_label}}_form">
@@ -112,7 +121,11 @@
                             <div class="block--row-strech">
                                 <div>
                                     <button id="{{upform.file.id_for_label}}_upload_button" class="fr-icon-upload-line fr-btn--icon-left fr-btn fr-btn--secondary fr-my-1w" type="button">
-                                        Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                                        {% if convention.is_denonciation %}
+                                            Déposer la dénonciation
+                                        {% else %}
+                                            Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                                        {% endif %}
                                     </button>
                                     {% for error in upform.file.errors %}
                                         <p id="text-input-error-desc-error" class="fr-error-text">
