--- a/templates/conventions/recapitulatif/denonciation.html
+++ b/templates/conventions/recapitulatif/denonciation.html
@@ -13,7 +13,7 @@
                 <div class="table--limited-height">
                     {% include "common/display_field_if_exists.html" with label="Date de la dénonciation" value=convention.date_denonciation object_field="convention__date_denonciation__"|add:convention_uuid %}
                     {% include "common/display_textfield_if_exists.html" with label="Motif de la dénonciation" value=convention.motif_denonciation object_field="convention__motif_denonciation__"|add:convention_uuid %}
-                    {% include "common/display_text_and_files_if_exists.html" with label="Acte authentique/administratif" file_list=convention.fichier_denonciation|get_files_from_textfiles object_field="convention__fichier_denonciation__"|add:convention_uuid %}
+                    {% include "common/display_text_and_files_if_exists.html" with label="Acte authentique/administratif" file_list=convention.fichier_instruction_denonciation|get_files_from_textfiles object_field="convention__fichier_instruction_denonciation__"|add:convention_uuid %}
                 </div>
             </div>
         </div>
