--- a/templates/conventions/actions/delete.html
+++ b/templates/conventions/actions/delete.html
@@ -8,7 +8,7 @@
                 Supprimer ce projet {{convention|display_kind_with_preposition}}
             </p>
             <p class="fr-mb-0">
-                {{convention|display_kind_with_demonstratif_with_cap}} est annulé{{convention|display_gender_terminaison}}, il vous est possible de {{convention|display_pronom}} supprimer définitivement. Vous perdrez alors tous les informations liées à {{convention|display_kind_with_demonstratif}}.
+                {{convention|display_kind_with_demonstratif|capfirst}} est annulé{{convention|display_gender_terminaison}}, il vous est possible de {{convention|display_pronom}} supprimer définitivement. Vous perdrez alors tous les informations liées à {{convention|display_kind_with_demonstratif}}.
             </p>
         </div>
         <button type="button" class="fr-btn apilos-btn--secondary--red fr-btn--icon-left fr-icon-delete-line fr-my-1w" data-fr-opened="false" aria-controls="fr-modal-{{convention.uuid}}">
