--- a/templates/conventions/actions/upload_signed_document.html
+++ b/templates/conventions/actions/upload_signed_document.html
@@ -1,11 +1,20 @@
+{% load display_filters %}
 <div class="fr-col-12 fr-my-2w">
     {% if request|is_instructeur %}
         <div role="alert" class="fr-alert fr-alert--info fr-icon-arrow-right-s-line-double">
             <p class="fr-alert__title">
-                Déposer {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %}
+                {% if convention.is_denonciation %}
+                    Déposer l'acte de dénonciation publié
+                {% else %}
+                    Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                {% endif %}
             </p>
             <p class="fr-mb-2w">
-                Ici, vous pouvez déposer votre {% if convention.is_avenant %}avenant signé afin qu'il puisse être transmis.{% else %}convention signée afin qu'elle puisse être transmise.{% endif %}
+                {% if convention.is_denonciation %}
+                    Ici, vous pouvez déposer l'acte de dénonciation de votre convention publié.
+                {% else %}
+                    Ici, vous pouvez déposer votre {{convention|display_kind}} signé{{convention|display_gender_terminaison}} afin qu'{{convention|display_personnal_pronom}} puisse être transmis{{convention|display_gender_terminaison}}.
+                {% endif %}
             </p>
             <div class="block--row-strech">
 
@@ -20,7 +29,11 @@
                     <div class="block--row-strech">
                         <div>
                             <button id="{{upform.file.id_for_label}}_upload_button" class="fr-btn fr-icon-upload-line fr-btn--icon-left" type="button">
-                                Déposer {% if convention.is_avenant %}l'avenant signé{% else %}la convention signée{% endif %}
+                                {% if convention.is_denonciation %}
+                                    Déposer l'acte de dénonciation publié
+                                {% else %}
+                                    Déposer {{convention|display_kind_with_pronom}} signé{{convention|display_gender_terminaison}}
+                                {% endif %}
                             </button>
                             {% for error in upform.file.errors %}
                                 <p id="text-input-error-desc-error" class="fr-error-text">
@@ -51,13 +64,8 @@
         </div>
     {% else %}
         <div role="alert" class="fr-alert fr-alert--success">
-            {% if convention.is_avenant %}
-                <p >Ici, l'avenant pourra être déposé par l'administration en charge dès qu'il sera signé.
-                </p>
-            {% else %}
-                <p >Ici, la convention pourra être déposée par l'administration en charge dès qu'elle sera signée.
-                </p>
-            {% endif %}
+            <p >Ici, {{convention|display_kind_with_pronom}} pourra être déposé{{convention|display_gender_terminaison}} par l'administration en charge dès qu'{{convention|display_personnal_pronom}} sera signé{{convention|display_gender_terminaison}}.
+            </p>
             <a class="fr-my-1w fr-link" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
                 Consulter le récapitulatif
             </a>
