--- a/templates/conventions/submitted.html
+++ b/templates/conventions/submitted.html
@@ -1,5 +1,6 @@
 {% extends "layout/base.html" %}
 
+{% load display_filters %}
 {% block page_title %}Soumission - APiLos{% endblock%}
 
 {% block content %}
@@ -18,16 +19,10 @@
 
                 <div class="fr-col-md-12  fr-my-5w">
                     <h2>Félicitations</h2>
-                    <h4 class="fr-mb-3w">Bravo, vous venez de soumettre votre {% if convention.is_avenant %}avenant de {% endif %}convention à l'instruction en date du {{convention.soumis_le}}</h4>
-                    {% if convention.is_avenant %}
-                        <p class="fr-mb-3w">Le présent avenant ne peut plus être modifié. Le service instructeur a été notifié et instruira cet avenant dans les plus bref délais.
-                            Il reviendra ensuite vers vous pour finaliser cet avenant.
-                        </p>
-                    {% else %}
-                        <p class="fr-mb-3w">La présente convention ne peut plus être modifiée. Le service instructeur a été notifié et instruira cette convention dans les plus bref délais.
-                            Il reviendra ensuite vers vous pour finaliser cette convention.
-                        </p>
-                    {% endif %}
+                    <h4 class="fr-mb-3w">Bravo, vous venez de soumettre votre {% if convention.is_denonciation %}dénonciation de {% elif convention.is_avenant %}avenant de {% endif %}convention à l'instruction en date du {{convention.soumis_le}}</h4>
+                    <p class="fr-mb-3w">{{convention|display_pronom|capfirst}} présent{{convention|display_gender_terminaison}} {{convention|display_kind}} ne peut plus être modifié{{convention|display_gender_terminaison}}. Le service instructeur a été notifié et instruira {{convention|display_kind_with_demonstratif}} dans les plus bref délais.
+                        Il reviendra ensuite vers vous pour finaliser {{convention|display_kind_with_demonstratif}}.
+                    </p>
                     <p class="fr-mb-3w">Vous pouvez cependant consulter à tout moment les données saisies ainsi que le statut d'instruction sur la plateforme APiLos</p>
                     <p class="fr-mb-3w">Nous restons à votre disposition pour toute information et question.</p>
                     <p class="fr-mb-3w">En vous remerciant, nous vous souhaitons une bonne journée</p>
@@ -38,11 +33,7 @@
             <div class="form-button-footer fr-col-md-12  fr-py-5w">
                 {% include "common/button/return_convention_index.html" %}
                 <a class="fr-btn fr-btn--icon-left fr-icon-arrow-left-s-line" href="{% url 'conventions:recapitulatif' convention_uuid=convention.uuid %}">
-                    {% if convention.is_avenant %}
-                        Retour à l'avenant
-                    {% else %}
-                        Retour à la convention
-                    {% endif %}
+                    Retour à {{convention|display_kind_with_pronom}}
                 </a>
             </div>
         </div>
