Add administration to bailleur & administration section in recapitulatif

--- a/templates/conventions/recapitulatif/_card.html
+++ b/templates/conventions/recapitulatif/_card.html
@@ -1,6 +1,6 @@
 {% load custom_filters %}
 
-<div class="fr-grid-row fr-grid-row--gutters">
+<div class="fr-grid-row fr-grid-row--gutters {% block card_classes %}{% endblock card_classes %}">
     <div class="fr-col-12 fr-col-lg-12">
         <div class="fr-card fr-card--no-arrow">
             <div class="fr-card__body fr-my-2w">
